; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_pipe.c_mac_pipe_check_kqfilter.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_pipe.c_mac_pipe_check_kqfilter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32 }
%struct.pipe = type { i32 }

@pipe_check_kqfilter = common dso_local global i32 0, align 4
@mac_pipe_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_pipe_check_kqfilter(i32 %0, %struct.knote* %1, %struct.pipe* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.knote*, align 8
  %6 = alloca %struct.pipe*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.knote* %1, %struct.knote** %5, align 8
  store %struct.pipe* %2, %struct.pipe** %6, align 8
  %8 = load i32, i32* @pipe_check_kqfilter, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.knote*, %struct.knote** %5, align 8
  %11 = load %struct.pipe*, %struct.pipe** %6, align 8
  %12 = load %struct.pipe*, %struct.pipe** %6, align 8
  %13 = getelementptr inbounds %struct.pipe, %struct.pipe* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @MAC_CHECK(i32 %8, i32 %9, %struct.knote* %10, %struct.pipe* %11, i32 %14)
  %16 = load i32, i32* %7, align 4
  ret i32 %16
}

declare dso_local i32 @MAC_CHECK(i32, i32, %struct.knote*, %struct.pipe*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
